<resources>
    <string name="app_name">DreamMomemts</string>
    <string name="sign_in">Sign In</string>
    <string name="email_holder">Email</string>
    <string name="password_holder">Password</string>
    <string name="register">Register</string>
    <string name="first_name_holder">First Name</string>
    <string name="last_name_holder">Last Name</string>
    <string name="confirm_password_holder">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="one">ONE</string>
    <string name="soon">Coming Soon</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrollable_tabs">Scrollable Tabs</string>
    <string name="title_activity_feed">Feed</string>
    <string name="btn_simple_tabs">Simple Tabs</string>
    <string name="btn_scrollable_tabs">Scrollable Tabs</string>
    <string name="btn_icon_text_tabs">Icon &amp; Text Tabs</string>
    <string name="btn_icon_tabs">Only Icon Tabs</string>
    <string name="btn_pinned_top_tabs">Pinned To Top Tabs</string>
    <string name="title_activity_icon_text_tabs">Icon and Text Tabs</string>
    <string name="title_activity_icon_tabs">Icon Tabs</string>
    <string name="btn_custom_icon_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_custom_view_icon_text_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_pinned_top_tabs">Pin Top Tabs</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_register">Register</string>
    <string name="event_name">Event Name</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="venue">Venue</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="capacity">Capacity</string>
    <string name="admission">Admission</string>
    <string name="description">Description</string>
    <string name="contact">Contact</string>
</resources>
