<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.RegisterActivity">

    <EditText
        android:backgroundTint="@color/colorPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/first_name_holder"
        android:ems="10"
        android:id="@+id/first_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:backgroundTint="@color/colorPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/last_name_holder"
        android:ems="10"
        android:id="@+id/last_name"
        android:layout_below="@+id/first_name"
        android:layout_centerHorizontal="true" />

    <EditText
        android:backgroundTint="@color/colorPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_holder"
        android:ems="10"
        android:id="@+id/getEmail"
        android:layout_below="@+id/last_name"
        android:layout_centerHorizontal="true" />

    <EditText
        android:backgroundTint="@color/colorPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_holder"
        android:ems="10"
        android:id="@+id/password1"
        android:layout_below="@+id/getEmail"
        android:layout_centerHorizontal="true" />

    <EditText
        android:backgroundTint="@color/colorPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_password_holder"
        android:ems="10"
        android:id="@+id/password2"
        android:layout_below="@+id/password1"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gender"
        android:layout_below="@+id/password2"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:buttonTint="@color/colorPurple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/radioButton"
            android:layout_below="@+id/password2"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:buttonTint="@color/colorPurple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/radioButton2"
            android:layout_above="@+id/register_user"
            android:layout_alignParentEnd="true" />
    </RadioGroup>

    <Button
        style="@style/AppTheme"
        android:background="@color/colorPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register_user"
        android:layout_below="@+id/gender"
        android:layout_centerHorizontal="true" />
</RelativeLayout>