<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <EditText
        style="@style/AppTheme"
        android:backgroundTint="@color/colorPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_holder"
        android:ems="10"
        android:id="@+id/getEmail"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp" />

    <EditText
        style="@style/AppTheme"
        android:backgroundTint="@color/colorPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_holder"
        android:ems="10"
        android:id="@+id/getPassword"
        android:layout_below="@+id/getEmail"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/AppTheme"
        android:background="@color/colorPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/sign_in"
        android:layout_below="@+id/getPassword"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/AppTheme"
        android:background="@color/colorPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register_user"
        android:layout_below="@+id/sign_in"
        android:layout_alignStart="@+id/sign_in"
        android:layout_marginTop="10dp" />

</RelativeLayout>
